# rust-node-monitor

./: .gitignore  BACKLOG.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: CI.yml
docs/: PASSO-A-PASSO.md
examples/: express-example.mjs  fastify-example.mjs
js/: alerts.ts  express.ts  fastify.ts  index.ts  metrics.ts  nestjs.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
test/: alerts.test.ts  hello.test.ts  snapshot.test.ts
